[tool.poetry]
name = "flights"
version = "0.1.1"
description = "Flights is a package to simplify working with flight data at Sunshine Technology."
authors = ["Alex Macniven <macniven.ap@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.6b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
