[metadata]
name = flights
version = attr: flights.__version__
author = Alex Macniven
author_email = alex@sunshinetechnology.co.uk
description = Flights is a package to simplify working with flight data at Sunshine Technology.

[options]
python_requires = >=3.9
packages = find:

[options.extras_require]
dev = 
    pytest >= 5.2
    black  >= 21.6b0
    flake8 >= 3.9.2